--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
             <!-- song 1 -->
             <div class="phrases-1">
                 <img src="assets/song1.jpg" alt="">
-                <div>
+                <div class="phrases-text">
                     <h2>Disconnected</h2>
                     <h3>Keane</h3>
                     <p>I feel like i just don't know you anymore</p>
@@ -562,7 +562,7 @@
             <!-- song 2 -->
             <div class="phrases-1">
                 <img src="assets/song2.jpg" alt="">
-                <div>
+                <div class="phrases-text">
                     <h2>Fix You</h2>
                     <h3>Coldplay</h3>
                     <p>Lights will guide you home</p>
@@ -573,7 +573,7 @@
             <!-- song 3 -->
             <div class="phrases-1">
                 <img src="assets/song3.jpg" alt="">
-                <div>
+                <div class="phrases-text">
                     <h2>DARE</h2>
                     <h3>Gorillaz</h3>
                     <p>You've got to press it on you</p>
@@ -584,7 +584,7 @@
             <!-- song 4 -->
             <div class="phrases-1">
                 <img src="assets/song4.jpg" alt="">
-                <div>
+                <div class="phrases-text">
                     <h2>Sit Next To Me</h2>
                     <h3>Foster the People</h3>
                     <p>So come over here and sit next to me</p>
@@ -594,7 +594,7 @@
             <!-- song 5 -->
             <div class="phrases-1">
                 <img src="assets/song5.jpg" alt="">
-                <div>
+                <div class="phrases-text">
                     <h2>SOS</h2>
                     <h3>ABBA</h3>
                     <p>So when you're near me, darling</p>
@@ -604,7 +604,7 @@
             </div>
             <div class="phrases-1">
                 <img src="assets/song6.jpg" alt="">
-                <div>
+                <div class="phrases-text">
                     <h2>Faithfully</h2>
                     <h3>Journey</h3>
                     <p>And being apart ain't easy on this love affair</p>
@@ -613,7 +613,7 @@
             </div>
             <div class="phrases-1">
                 <img src="assets/song7.jpg" alt="">
-                <div>
+                <div class="phrases-text">
                     <h2>Brújula</h2>
                     <h3>Siddhartha</h3>
                     <p>Llegarán</p>
@@ -623,7 +623,7 @@
             </div>
             <div class="phrases-1">
                 <img src="assets/song8.jpg" alt="">
-                <div>
+                <div class="phrases-text">
                     <h2>Hoy</h2>
                     <h3>Gepe</h3>
                     <p>Hoy, el amor</p>
@@ -632,7 +632,7 @@
             </div>
             <div class="phrases-1">
                 <img src="assets/song9.jpg" alt="">
-                <div>
+                <div class="phrases-text">
                     <h2>El Lugar Correcto</h2>
                     <h3>Natalia Lafourcade</h3>
                     <p>Perdona, que me tuve que ausentar por un momento</p>
