fix: correct incorrect links

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <div class="header-content container" id="Inicio">
             <h1>DEAR MUSIC,</h1>
             <h3>Thank you</h3>
-            <p>Este espacio está dedicado a celebrar la música de los mejores artistas y bandas. Aquí podrás 
+            <p>Este espacio está dedicado a celebrar la música de algunos artistas y bandas. Aquí podrás 
                 explorar la historia, las canciones más icónicas y las redes sociales de tus músicos favoritos. 
-                Cada sección está diseñada para sumergirte en el mundo único de su arte y creatividad. ¡Disfruta 
-                explorando y descubriendo nuevos ritmos!
+                Cada sección está diseñada para sumergirte en el mundo único de su arte y creatividad. <strong>¡Disfruta 
+                    explorando y descubriendo nuevos ritmos!</strong>
             </p>
             <a href="https://music.apple.com/mx/playlist/musicvibes/pl.u-kv9l2M5C7G62oa7" target="_blank" class="btn-1">Escucha la playlist</a>
 
@@ -51,7 +51,7 @@
             <h2>Artistas/Bandas</h2>
             <p class="txt-p">En esta sección encontrarás algunos de los artistas y bandas que recomiendo. La selección 
                 incluye talentos de habla inglesa y grandes exponentes de la música en Latinoamérica. Cada uno tiene un 
-                estilo único que seguramente te encantará. ¡Explora y disfruta de sus canciones!</p>
+                estilo único que seguramente te encantará. <strong>¡Explora y disfruta de sus canciones!</strong></p>
         </div>
 
         <div class="artist-group">
@@ -138,8 +138,8 @@
                 </div>
                 <div class="social-media">
                     <ul>
-                        <li><a href="https://open.spotify.com/intl-es/artist/53A0W3U0s8diEn9RhXQhVz?si=af2hAFQzQqaW50LE0QMpfA" target="_blank" class="spotify"><i class="bi bi-spotify"></i> Spotify</a></li>
-                        <li><a href="https://music.apple.com/do/artist/keane/1187178" target="_blank" class="apple"><i class="bi bi-apple"></i> Apple</a></li>
+                        <li><a href="https://open.spotify.com/intl-es/artist/53A0W3U0s8diEn9RhXQhVz?autoplay=true" target="_blank" class="spotify"><i class="bi bi-spotify"></i> Spotify</a></li>
+                        <li><a href="https://music.apple.com/mx/artist/keane/1187178" target="_blank" class="apple"><i class="bi bi-apple"></i> Apple</a></li>
                     </ul>
                 </div>
             </div>
@@ -153,8 +153,8 @@
                 <h2>Coldplay</h2>
                 <h3>Género: Rock Alternativo</h3>
                 <p>Banda británica formada en 1996 en Londres. Se han convertido en una de las bandas más exitosas y reconocidas 
-                    del mundo gracias a su mezcla de rock alternativo y sonidos atmosféricos. Con su álbum debut Parachutes en 2000, 
-                    lograron un éxito internacional con temas como "Yellow" y "The Scientist".
+                    del mundo gracias a su mezcla de rock alternativo y sonidos atmosféricos. Con su álbum debut <strong>Parachutes</strong> en 2000, 
+                    lograron un éxito internacional con temas como <em>"Yellow"</em> y <em>"The Scientist"</em>.
                 </p>
                 <h3>Album más popular</h3> 
                 <h4> Parachutes(2000)</h4>
@@ -197,8 +197,8 @@
                 </div>
                 <div class="social-media">
                     <ul>
-                        <li><a href="https://open.spotify.com/intl-es/artist/0LcJLqbBmaGUft1e9Mm8HV?autoplay=true" target="_blank" class="spotify"><i class="bi bi-spotify"></i> Spotify</a></li>
-                        <li><a href="https://music.apple.com/mx/artist/abba/372976" target="_blank" class="apple"><i class="bi bi-apple"></i> Apple</a></li>
+                        <li><a href="https://open.spotify.com/intl-es/artist/3AA28KZvwAUcZuOKwyblJQ?autoplay=true"  target="_blank" class="spotify"><i class="bi bi-spotify"></i> Spotify</a></li>
+                        <li><a href="https://music.apple.com/mx/artist/gorillaz/1529389870" target="_blank" class="apple"><i class="bi bi-apple"></i> Apple</a></li>
                     </ul>
                 </div>
             </div>
@@ -254,8 +254,8 @@
                 </div>
                 <div class="social-media">
                     <ul>
-                        <li><a href="https://open.spotify.com/intl-es/artist/53A0W3U0s8diEn9RhXQhVz?si=af2hAFQzQqaW50LE0QMpfA" target="_blank" class="spotify"><i class="bi bi-spotify"></i> Spotify</a></li>
-                        <li><a href="https://music.apple.com/do/artist/keane/1187178" target="_blank" class="apple"><i class="bi bi-apple"></i> Apple</a></li>
+                        <li><a href="https://open.spotify.com/intl-es/artist/0LcJLqbBmaGUft1e9Mm8HV?autoplay=true" target="_blank" class="spotify"><i class="bi bi-spotify"></i> Spotify</a></li>
+                        <li><a href="https://music.apple.com/mx/artist/abba/372976" target="_blank" class="apple"><i class="bi bi-apple"></i> Apple</a></li>
                     </ul>
                 </div>
             </div>
@@ -283,7 +283,7 @@
                 </div>
                 <div class="social-media">
                     <ul>
-                        <li><a href="https://open.spotify.com/intl-es/artist/2m62cc253Xvd9qYQ8d2X3d?autoplay=true"><i class="bi bi-spotify"></i> Spotify</a></li>
+                        <li><a href="https://open.spotify.com/intl-es/artist/2m62cc253Xvd9qYQ8d2X3d?autoplay=true" target="_blank" class="spotify"><i class="bi bi-spotify"></i> Spotify</a></li>
                         <li><a href="https://music.apple.com/mx/artist/the-alan-parsons-project/13525" target="_blank" class="apple"><i class="bi bi-apple"></i> Apple</a></li>
                     </ul>
                 </div>
